--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -75,6 +75,9 @@
       </div>
 
     </main>
+        <footer class="app-footer">
+      Designed &amp; Developed by <strong>Vaibhav</strong>
+    </footer>
   </div>
 
   <!-- ================= SCRIPT ================= -->
